fix: prevent initial flicker of load more button

--- a/style.css
+++ b/style.css
@@ -3383,9 +3383,6 @@ body.stocksPage .stocksUpdatedAt{
   outline:none;
 }
 
-.newsMoreBtn {
-  display: none;
-}
 .newsListWrap{
   position:relative;
 }
